# scRCAT-seq2

./: README.md  callpeak_TSS_TES.R  fastq_extraction_reconstruct.sh  find_smart3_and_trim_TSS_cdna.py  find_smart3_and_trim_TSS_cdna_noOligo.py  find_smart3_and_trim_umi.py  find_withA10_and_noA10_v2.py  gzp  identify_valid_reads.sh  isoform_construct.R  run_star.sh
scRCAT-seq2/gzp/: Cargo.toml
scRCAT-seq2/gzp/src/: fmi.rs  main.rs
scRCAT-seq2/scRCAT-seq/: Cargo.toml
scRCAT-seq2/scRCAT-seq/src/: gtf.rs  gtf_parse.rs  main.rs  parse_gene.rs  read.rs  struct.rs
source_files/: barcode.txt  hg38_SIRVercc.conf  run_zumis.yaml  ss3_isofrom.py
source_files/pyModule/: hg38_SIRVercc.conf  informative_reads.py  isoform_reconstruct.py  reference.py
