[package]
name = "scRCAT-seq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# noodles = { version = "*", features = ["bam"] }
rust-htslib = { version = "*", default-features = false }
flate2 = "*"
bio = "*"
bio-types = "*"
polars = "*"
clap = { version = "3.0.14", features = ["derive"] }
crossbeam = "*"
threadpool = "*"
rayon = "*"